# dnscrypt-proxy-1.6.0

./: configure.ac
init/: dnscrypt-proxy.default  dnscrypt-proxy.init
src/plugins/: Makefile.am
src/plugins/ldns-a-redis/: Makefile.am  ldns-a-redis.c
